discussion/kv_engine/184517/184517_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for retrieving per-thread cpu usage

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-05 13:54:50.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-05 14:07:09.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51677/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51677/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43383/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43383/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21973/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/daemon/stats.cc b/daemon/stats.cc
index 5bacabe8e..17e717072 100644
--- a/daemon/stats.cc
+++ b/daemon/stats.cc
@@ -247,7 +247,10 @@ cb::engine_errc server_prometheus_stats(
                     sigar::iterate_process_threads(
                             instance,
                             getpid(),
-                            [&amp;kvCollector](auto tid, auto name, auto user, auto system) {
+                            [&amp;kvCollector](auto tid,
+                                           auto name,
+                                           auto user,
+                                           auto system) {
                                 std::string n(name);
                                 if (name.empty()) {
                                     n = std::to_string(tid);
@@ -262,8 +265,7 @@ cb::engine_errc server_prometheus_stats(
                                         {{&quot;thread&quot;, n}, {&quot;system&quot;, &quot;yes&quot;}});
                             });
                 } catch (const std::exception&amp; e) {
-                    LOG_WARNING(&quot;sigar::iterate_process_threads: {}&quot;,
-                                e.what());
+                    LOG_WARNING(&quot;sigar::iterate_process_threads: {}&quot;, e.what());
                 }
                 sigar_close(instance);
             }

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21973/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22346/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10: error: "sigar.h" file not found [clang-diagnostic-error]
#include <sigar.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/stats.cc:24:10: error: "sigar.h" file not found [clang-diagnostic-error]
#include <sigar.h>
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22346/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
error: "sigar.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22346/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12067/ : FAILURE

Compile error at [2023-01-05T14:05:30.987Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12067/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1109/ : FAILURE

Compile error at [2023-01-05T13:58:51.388Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/stats.cc:24:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1109/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24813/ : FAILURE

Compile error at [2023-01-05T14:01:23.025Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24813/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25672/ : FAILURE

Compile error at [2023-01-05T13:56:34.194Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25672/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23917/ : FAILURE

Compile error at [2023-01-05T14:06:59.256Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23917/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24390/ : FAILURE

Compile error at [2023-01-05T13:59:31.657Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/stats.cc:24:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24390/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32809/ : FAILURE

Compile error at [2023-01-05T14:00:48.296Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32809/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12154/ : FAILURE

Compile error at [2023-01-05T14:01:41.369Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12154/ )
----------------------------------------------------------------------------------------------------------------------
